Fix for titlebar overlapping header.

--- a/src/Powercord/plugins/pc-sdk/scss/style.scss
+++ b/src/Powercord/plugins/pc-sdk/scss/style.scss
@@ -21,6 +21,7 @@
   &-header {
     top: 22px;
     box-shadow: var(--elevation-low);
+    position: absolute !important;
 
     .children-19S4PO {
       div:first-child {
